# QuSpin-Extensions

./: .gitignore  .gitmodules  clean_files.sh  pyproject.toml  setup.py
.github/workflows/: CI.yml  build.yml  ci.yml  test.yml  test_build.yml
quspin-basis-1d-extensions/: README.md  pyproject.toml  setup.py
quspin-basis-1d-extensions/src/quspin/: __init__.py
quspin-basis-1d-extensions/src/quspin/extensions/basis/basis_1d/_basis_1d_core/: hcp_basis.pyx  spf_ops.pyx
quspin-basis-general-extensions/: README.md  pyproject.toml  setup.py
quspin-basis-general-extensions/src/quspin/extensions/basis/_basis_utils/: ptrace_ordering.h
quspin-basis-general-extensions/src/quspin/extensions/basis/basis_general/_basis_general_core/: boson_core.pyx  hcb_core.pyx  higher_spin_core.pyx
quspin-basis-utils-extensions/: pyproject.toml  setup.py
src/quspin/extensions/basis/basis_1d/_basis_1d_core/: boson_ops.pyx  glibc_fix.h  spf_basis.pyx
src/quspin/extensions/basis/basis_general/_basis_general_core/: spinful_fermion_core.pyx
src/quspin/extensions/basis/basis_general/_basis_general_core/source/: general_basis_core.pyx
src/quspin/extensions/expm_multiply_parallel_core/: setup.py
src/quspin_extensions/basis/basis_1d/_basis_1d_core/: __init__.py  basis_ops.py  boson_basis.pyx  hcp_ops.pyx  setup.py
src/quspin_extensions/basis/basis_general/_basis_general_core/: __init__.py  general_basis_utils.pyx  spinless_fermion_core.pyx
src/quspin_extensions/basis/basis_general/_basis_general_core/source/: complex_ops.h  general_basis_bitops.h  general_basis_core.pxd  general_basis_core.pyx  general_basis_op.h  misc.h
